namespace SmartQuote.Modules.EvaluationSimulation.Application.OutboundServices;

public record ApprovedSimulationSnapshot();
