namespace SmartQuote.API.PurchaseOrdering.Domain.Model.Enums;

public enum PurchaseOrderStatus
{
    Issued,
    Cancelled
}
